--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@next/font": "^13.1.1",
+    "i18next": "^22.4.9",
     "keen-slider": "^6.8.5",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tss-react": "^4.5.2"
+    "react-i18next": "^12.1.4"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
