--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,10 @@
     "incremental": true,
     "baseUrl": "." /* Base directory to resolve non-absolute module names. */,
     "paths": {
-      "@/components/*": ["components/*"]
+      "@/components/*": ["components/*"],
+      "@/utils/*": ["utils/*"],
+      "@/layouts/*": ["layouts/*"],
+      "@/theme/*": ["theme/*"]
     },
     "allowSyntheticDefaultImports": true
   },
