--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "@/components/*": ["components/*"],
       "@/utils/*": ["utils/*"],
       "@/layouts/*": ["layouts/*"],
-      "@/theme/*": ["theme/*"]
+      "@/theme/*": ["theme/*"],
+      "@/store/*": ["store/*"]
     },
     "allowSyntheticDefaultImports": true
   },
