--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@next/font": "^13.1.1",
     "i18next": "^22.4.9",
@@ -28,6 +27,7 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.1",
     "@types/node": "16.11.10",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.10",
