--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "next-ts-template",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "env-cmd -f .env next dev",
+    "build": "env-cmd -f .env next build",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install",
@@ -15,22 +15,30 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.11.4",
     "@next/font": "^13.1.1",
+    "axios": "^1.2.3",
+    "env-cmd": "^10.1.0",
     "i18next": "^22.4.9",
     "keen-slider": "^6.8.5",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
+    "react-modal-video": "^2.0.0",
+    "react-player": "^2.11.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "sass": "^1.57.1",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.10",
+    "@types/react-modal-video": "^1.2.0",
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.1",
     "husky": "^7.0.4",
