add package react-slick 🚗

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-player": "^2.11.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "sass": "^1.57.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.6"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.10",
     "@types/react-modal-video": "^1.2.0",
+    "@types/react-slick": "^0.23.10",
     "eslint": "7.32.0",
     "eslint-config-next": "^13.1.1",
     "husky": "^7.0.4",
