--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.11.4",
     "@next/font": "^13.1.1",
     "axios": "^1.2.3",
+    "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
     "i18next": "^22.4.9",
     "keen-slider": "^6.8.5",
