--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^22.4.9",
     "keen-slider": "^6.8.5",
     "next": "^13.1.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
