--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.11.4",
+    "@mui/x-data-grid": "^5.17.21",
     "@next/font": "^13.1.1",
     "axios": "^1.2.3",
     "dayjs": "^1.11.7",
