--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "env-cmd": "^10.1.0",
     "i18next": "^22.4.9",
     "keen-slider": "^6.8.5",
+    "lodash.intersection": "^4.4.0",
     "next": "^13.1.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.0.1",
+    "@types/lodash.intersection": "^4.4.7",
     "@types/node": "16.11.10",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.10",
