--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-player": "^2.11.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
+    "react-twitter-embed": "^4.0.4",
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "swiper": "^8.4.6"
