--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -19,6 +19,7 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
         port: 22
-#         script: |
-#           cd /opt/bitnami/projects/game-hub-react
+        script: |
+          cd /opt/bitnami/projects/game-hub-react
