--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Deploy to react.komoverse.dev
-      uses: appleboy/ssh-action@v0.1.7
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
@@ -22,6 +22,6 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         port: 22
         script: |
-          sudo cp /opt/bitnami/projects/game-hub-react
+          cd ~/opt/bitnami/projects/game-hub-react
           git pull origin develop
           pm2 restart game-hub-react
