--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -22,6 +22,6 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         port: 22
         script: |
-          cd ~/opt/bitnami/projects/game-hub-react
+          cd /opt/bitnami/projects/game-hub-react
           git pull origin develop
           pm2 restart game-hub-react
