--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -24,4 +24,5 @@ jobs:
         script: |
           cd /opt/bitnami/projects/game-hub-react
           git pull origin develop
+          git status
           pm2 restart game-hub-react
