--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -1,26 +1,28 @@
-name: Node.js CD
+name: Node.Js CD
 
 on:
   push:
-    branches: [ develop ]
+    branches: [develop]
 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Deploy to react.komoverse.dev
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '14.x'
+    - run: npm install
+    - run: npm run build
+    - name: Deploy
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
-        port: 22
-        debug: true
         script: |
           cd /opt/bitnami/projects/game-hub-react
           git pull origin develop
+          npm install
           pm2 restart game-hub-react
