--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -9,12 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '14.x'
-    - run: npm install
-    - run: npm run build
-    - name: Deploy
+    - name: Deploy react.komoverse.dev
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
