--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -8,15 +8,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Deploy react.komoverse.dev
-    - uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        script: |
-          cd /opt/bitnami/projects/game-hub-react
-          git pull origin develop
-      ## pm2 restart game-hub-react
+      - name: Deploy react.komoverse.dev
+        uses: actions/checkout@v2
+      - name: Download artifact
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            cd /opt/bitnami/projects/game-hub-react
+            git pull origin develop
+            pm2 restart game-hub-react
