--- a/.github/workflows/dev-CD.yaml
+++ b/.github/workflows/dev-CD.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Deploy react.komoverse.dev
         uses: actions/checkout@v2
       - name: Download artifact
-        uses: appleboy/ssh-action@0.1.7
+        uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
