--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@metamask/detect-provider": "^2.0.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.11.4",
@@ -22,6 +23,7 @@
     "axios": "^1.2.3",
     "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
+    "ethers": "5.4",
     "i18next": "^22.4.9",
     "keen-slider": "^6.8.5",
     "lodash.intersection": "^4.4.0",
@@ -37,7 +39,8 @@
     "react-twitter-embed": "^4.0.4",
     "redux": "^4.2.0",
     "sass": "^1.57.1",
-    "swiper": "^8.4.6"
+    "swiper": "^8.4.6",
+    "wagmi": "0.9.x"
   },
   "devDependencies": {
     "@iconify/react": "^4.0.1",
