--- a/.github/workflows/dev-CI.yaml
+++ b/.github/workflows/dev-CI.yaml
@@ -17,4 +17,5 @@ jobs:
         node-version: 14.x
         cache: 'npm'
     - run: npm i
+    - run: npm cache clean --force
     - run: npm run build 
