add utils secure ls, secure cookies and currency format

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@mui/x-data-grid": "^5.17.21",
     "@next/font": "^13.1.1",
     "axios": "^1.2.3",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "env-cmd": "^10.1.0",
-    "ethers": "5.4",
     "i18next": "^22.4.9",
+    "js-cookie": "^3.0.1",
     "keen-slider": "^6.8.5",
     "lodash.intersection": "^4.4.0",
     "next": "^13.1.1",
@@ -39,11 +40,13 @@
     "react-twitter-embed": "^4.0.4",
     "redux": "^4.2.0",
     "sass": "^1.57.1",
-    "swiper": "^8.4.6",
-    "wagmi": "0.9.x"
+    "secure-ls": "^1.2.6",
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "@iconify/react": "^4.0.1",
+    "@types/crypto-js": "^4.1.1",
+    "@types/js-cookie": "^3.0.2",
     "@types/lodash.intersection": "^4.4.7",
     "@types/node": "16.11.10",
     "@types/react": "^18.0.10",
