--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BASE_URL_API=https://api.komoverse.dev
 NEXT_PUBLIC_API_KEY=erewr139283
 PORT=3113
+NEXT_PUBLIC_PASSPHRASE=k0Mov3rs3s3cr3t@
