--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NEXT_PUBLIC_BASE_URL_API=https://api.komoverse.dev
 NEXT_PUBLIC_API_KEY=erewr139283
-PORT=3113
 NEXT_PUBLIC_PASSPHRASE=k0Mov3rs3s3cr3t@
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6Ld2nIskAAAAAOoCugTOo2w-9N7GEh5sIHqcLs99
+NEXT_PUBLIC_RECAPTCHA_SECRET_KEY=6Ld2nIskAAAAAAfWDMnjVWRUr1BVL3DZQwMsQDgw
+PORT=3113
