--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.11.4",
@@ -32,6 +33,8 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.43.1",
     "react-i18next": "^12.1.4",
     "react-modal-video": "^2.0.0",
     "react-player": "^2.11.0",
@@ -41,7 +44,8 @@
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "secure-ls": "^1.2.6",
-    "swiper": "^8.4.6"
+    "swiper": "^8.4.6",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@iconify/react": "^4.0.1",
@@ -51,6 +55,7 @@
     "@types/node": "16.11.10",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.10",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-modal-video": "^1.2.0",
     "@types/react-slick": "^0.23.10",
     "eslint": "7.32.0",
