--- a/.github/workflows/dev-CI.yaml
+++ b/.github/workflows/dev-CI.yaml
@@ -10,11 +10,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 14
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
           cache: 'npm'
       - run: npm i
       - run: npm cache clean --force
+      - run: npm cache c
       - run: npm run build
