--- a/.github/workflows/dev-CI.yaml
+++ b/.github/workflows/dev-CI.yaml
@@ -15,6 +15,7 @@ jobs:
         with:
           node-version: 14.x
           cache: 'npm'
-      - run: npm i
+      - run: rm -rf node_modules package-lock.json
+      - run: npm ci
       - run: npm cache clean --force
       - run: npm run build
