--- a/.github/workflows/dev-CI.yaml
+++ b/.github/workflows/dev-CI.yaml
@@ -16,5 +16,6 @@ jobs:
           node-version: 14.x
           cache: 'npm'
       - run: rm -rf node_modules package-lock.json
+      - run: npm install
       - run: npm cache clean --force
       - run: npm run build
