--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-brackets": "^0.4.7",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.1",
@@ -43,6 +44,7 @@
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
     "react-twitter-embed": "^4.0.4",
+    "recharts": "^2.4.3",
     "redux": "^4.2.0",
     "sass": "^1.57.1",
     "secure-ls": "^1.2.6",
