--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-player": "^2.11.0",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.5",
+    "react-share": "^4.4.1",
     "react-twitter-embed": "^4.0.4",
     "recharts": "^2.4.3",
     "redux": "^4.2.0",
