feat: add some mssing transaltion for registration form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "editor.tabSize": 2,
   "prettier.endOfLine": "auto",
   "eslint.run": "onSave",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "i18n-ally.localesPaths": ["locales", "public/locales", "store/language"]
 }
